# Streaming_building_data_project

./: .dockerignore  .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  Readme.md  docker-compose.yml
A2A/: A2A_nval0007.ipynb  building_information.csv
A2B/: Assignment-2B-Task1_producer_nval0007.ipynb  Assignment-2B-Task2_spark_streaming_nval0007.ipynb  Assignment-2B-Task3_consumer_nval0007.ipynb  new_building_information.csv
A2B_production/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
A2B_production/configs/: local.yaml
A2B_production/docker/: Dockerfile
A2B_production/src/a2b_production/: __init__.py  __main__.py  clean.py  cli.py  config.py  daily_aggregator.py  dashboard.py  inference.py  kafka_utils.py  lakehouse_sink.py  monitor.py  producer.py  schemas.py  spark.py  transforms.py  validate.py
A2B_production/src/a2b_production/dashboard_static/: index.html
A2B_production/tests/: test_dashboard.py  test_lakehouse.py  test_producer.py  test_transforms.py
docker/jupyter-spark/: Dockerfile
